Add Repository for all Entity

--- a/Deliver/Repository/Repository.csproj
+++ b/Deliver/Repository/Repository.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Impl\_Core\" />
+    <Folder Include="_Core\" />
+  </ItemGroup>
+
 </Project>
