--- a/Deliver/Deliver/Properties/launchSettings.json
+++ b/Deliver/Deliver/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "Deliver": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7034;http://localhost:5034",
+      "launchBrowser": false,
+      "launchUrl": "/",
+      "applicationUrl": "http://localhost:5001;https://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
