--- a/Deliver/Deliver/appsettings.Development.json
+++ b/Deliver/Deliver/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1,1433;Database=deliverApp;User Id=sa;Password=pa55w0rd!;"
+  },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
   }
 }
