--- a/Deliver/Deliver/Deliver.csproj
+++ b/Deliver/Deliver/Deliver.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>89186441-03b5-48db-89df-fe7775da7b7e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DeployApp\DeployApp.csproj" />
+    <ProjectReference Include="..\Integrations\Integrations.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
