2: Add api for add new users

--- a/Deliver/Services/Services.csproj
+++ b/Deliver/Services/Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Integrations\Integrations.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
