--- a/jsApps/launcher/package.json
+++ b/jsApps/launcher/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.6.0",
+        "@mui/material": "^5.6.0",
         "@testing-library/jest-dom": "^5.16.3",
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
@@ -10,9 +14,15 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "axios": "^0.26.1",
+        "mobx": "^6.5.0",
+        "mobx-react": "^7.3.0",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-query": "^3.34.19",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
+        "sass": "^1.49.11",
         "typescript": "^4.6.3",
         "web-vitals": "^2.1.4"
     },
@@ -39,5 +49,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "jest": "^27.5.1"
     }
 }
