--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,9 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
+        defaults:
+          run:
+            working-directory: ./jsApps/launcher
 
         steps:
             - uses: actions/checkout@v3
@@ -20,5 +23,6 @@ jobs:
               with:
                   node-version: 16.x
                   cache: "npm"
-            - run: npm ci .\jsApps\launcher
-            - run: npm --prefix .\jsApps\launcher run test
+                  cache
+            - run: npm ci
+            - run: npm run test
