--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,21 +1,24 @@
 name: .NET
 
-on: [push, pull_request]
+on:
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore ./Deliver
-    - name: Build
-      run: dotnet build --no-restore ./Deliver
-    - name: Test
-      run: dotnet test --no-build --verbosity normal ./Deliver
+        steps:
+            - uses: actions/checkout@v3
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v2
+              with:
+                  dotnet-version: 6.0.x
+            - name: Restore dependencies
+              run: dotnet restore ./Deliver
+            - name: Build
+              run: dotnet build --no-restore ./Deliver
+            - name: Test
+              run: dotnet test --no-build --verbosity normal ./Deliver
