--- a/jsApps/launcher/package.json
+++ b/jsApps/launcher/package.json
@@ -17,6 +17,7 @@
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "axios": "^0.26.1",
+        "date-fns": "^2.28.0",
         "mobx": "^6.5.0",
         "mobx-react": "^7.3.0",
         "react": "17.0.2",
