--- a/Deliver/Deliver/appsettings.Development.json
+++ b/Deliver/Deliver/appsettings.Development.json
@@ -10,5 +10,6 @@
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+    "FrontAppUrl": "https://localhost:3000"
   }
 }
