add a new page, where will be password recovery form

--- a/Deliver/Deliver/appsettings.Development.json
+++ b/Deliver/Deliver/appsettings.Development.json
@@ -10,6 +10,6 @@
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
-    "FrontAppUrl": "https://localhost:3000"
+    "FrontAppUrl": "http://localhost:3000"
   }
 }
