--- a/jsApps/launcher/package.json
+++ b/jsApps/launcher/package.json
@@ -33,7 +33,8 @@
         "start": "node ../utils/config-init.js %npm_config_env% && react-scripts start",
         "start:dev": "npm run start --env=dev",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "build": "node ../utils/config-init.js %npm_config_env% && react-scripts build"
     },
     "eslintConfig": {
         "extends": [
