Add prod config

--- a/jsApps/docker-compose.dev.yml
+++ b/jsApps/docker-compose.dev.yml
@@ -2,6 +2,9 @@ version: "3.8"
 
 services:
     app:
+        volumes:
+            - ./launcher/src:/app/launcher/src
+            - ./utils/:/app/utils
         container_name: react-app
         image: react-app
         build:
