--- a/jsApps/launcher/package.json
+++ b/jsApps/launcher/package.json
@@ -36,7 +36,7 @@
         "start:docker": "react-scripts start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "build": "node ../utils/config-init.js %npm_config_env% && react-scripts build"
+        "build": "react-scripts build"
     },
     "eslintConfig": {
         "extends": [
