Add dockers files for deyploy

--- a/Deliver/Deliver/Properties/launchSettings.json
+++ b/Deliver/Deliver/Properties/launchSettings.json
@@ -35,6 +35,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5001;https://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
