--- a/jsApps/nginx.conf
+++ b/jsApps/nginx.conf
@@ -1,9 +1,34 @@
+worker_processes 1;
+
+events { worker_connections 1024; }
+
+http {
+
+    upstream web-api {
+        server backend:5000;
+    }
+
   server {
     listen 80;
+    
+    server_name deliver.eastus.cloudapp.azure.com *.deliver.eastus.cloudapp.azure.com;
 
     location / {
       root /usr/share/nginx/html/;
       include /etc/nginx/mime.types;
       try_files $uri $uri/ /index.html;
     }
+
+    location /Api {
+      proxy_pass         http://web-api;
+      proxy_http_version 1.1;
+      proxy_set_header   Upgrade $http_upgrade;
+      proxy_set_header   Connection keep-alive;
+      proxy_set_header   Host $host;
+      proxy_cache_bypass $http_upgrade;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto $scheme;
+    } 
   }
+}
+
