Add dokcker configuration for deploy app in web

--- a/Deliver/Deliver/appsettings.Development.json
+++ b/Deliver/Deliver/appsettings.Development.json
@@ -9,7 +9,9 @@
     "DefaultConnection": "Server=127.0.0.1,1433;Database=deliverApp;User Id=sa;Password=pa55w0rd!;"
   },
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
     "FrontAppUrl": "http://localhost:3000"
+  },
+  "JwtSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   }
 }
