--- a/.gitignore
+++ b/.gitignore
@@ -567,3 +567,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,dotnetcore,react,visualstudio,visualstudiocode
+
+mssql/
+secret/*
