--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,15 @@
-worker_processes 1;
+user nginx;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1000;
+}
 
 http {
+  sendfile on;
 
-    upstream web-api {
-        server backend:5000;
-    }
+  upstream api {
+      server backend:5000;
+  }
 
   server {
     listen 80;
@@ -20,15 +23,13 @@ http {
     }
 
     location /Api {
-      proxy_pass         http://web-api;
-      proxy_http_version 1.1;
-      proxy_set_header   Upgrade $http_upgrade;
-      proxy_set_header   Connection keep-alive;
+      rewrite /api/(.*) /$1 break;
+      proxy_pass http://api;
+      proxy_redirect     off;
       proxy_set_header   Host $host;
-      proxy_cache_bypass $http_upgrade;
+      proxy_set_header   X-Real-IP $remote_addr;
       proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto $scheme;
-    } 
+      proxy_set_header   X-Forwarded-Host $server_name;
+    }
   }
 }
-
