--- a/nginx.conf
+++ b/nginx.conf
@@ -12,9 +12,12 @@ http {
   }
 
   server {
-    listen 80;
+    listen 443 ssl;
     
-    server_name deliver.eastus.cloudapp.azure.com *.deliver.eastus.cloudapp.azure.com;
+    server_name app.k-deliver.co.in *.app.k-deliver.co.in;
+
+    ssl_certificate /etc/nginx/certs/cert.crt;
+    ssl_certificate_key /etc/nginx/certs/private.key;
 
     location / {
       root /usr/share/nginx/html/;
