--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
         ports:
             - "80:80"
             - "443:443"
+        volumes:
+            - /data/certs:/etc/nginx/certs
 
 secrets:
     ConnectionStrings__DefaultConnection:
