--- a/Deliver/Deliver/appsettings.Prod.json
+++ b/Deliver/Deliver/appsettings.Prod.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "FrontAppUrl": "http://deliver.eastus.cloudapp.azure.com"
+    "FrontAppUrl": "https://k-deliver.co.in/"
   },
   "ConnectionStrings": {
   },
