Fix prod config

--- a/Deliver/Deliver/appsettings.Prod.json
+++ b/Deliver/Deliver/appsettings.Prod.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "FrontAppUrl": "https://k-deliver.co.in/"
+    "FrontAppUrl": "https://k-deliver.co.in"
   },
   "ConnectionStrings": {
   },
