--- a/jsApps/launcher/package.json
+++ b/jsApps/launcher/package.json
@@ -3,38 +3,40 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.9.0",
-        "@emotion/styled": "^11.8.1",
-        "@mui/icons-material": "^5.6.0",
-        "@mui/lab": "^5.0.0-alpha.77",
-        "@mui/material": "^5.6.0",
-        "@mui/x-data-grid": "^5.9.0",
-        "@testing-library/jest-dom": "^5.16.3",
-        "@testing-library/react": "^12.1.4",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.1",
-        "@types/node": "^16.11.26",
-        "@types/react": "^17.0.43",
-        "@types/react-dom": "^17.0.14",
-        "axios": "^0.26.1",
-        "date-fns": "^2.28.0",
-        "mobx": "^6.5.0",
-        "mobx-react": "^7.3.0",
+        "@emotion/react": "11.9.0",
+        "@emotion/styled": "11.8.1",
+        "@mui/icons-material": "5.6.0",
+        "@mui/lab": "5.0.0-alpha.77",
+        "@mui/material": "5.6.0",
+        "@mui/x-data-grid": "5.9.0",
+        "@mui/x-date-pickers": "5.0.0-beta.1",
+        "@testing-library/jest-dom": "5.16.3",
+        "@testing-library/react": "12.1.4",
+        "@testing-library/user-event": "13.5.0",
+        "@types/jest": "27.4.1",
+        "@types/node": "16.11.26",
+        "@types/react": "17.0.43",
+        "@types/react-dom": "17.0.14",
+        "axios": "0.26.1",
+        "date-fns": "2.28.0",
+        "mobx": "6.5.0",
+        "mobx-react": "7.3.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-query": "^3.34.19",
-        "react-router-dom": "^6.3.0",
+        "react-query": "3.34.19",
+        "react-router-dom": "6.3.0",
         "react-scripts": "5.0.0",
-        "sass": "^1.49.11",
-        "typescript": "^4.6.3",
-        "web-vitals": "^2.1.4"
+        "sass": "1.49.11",
+        "typescript": "4.6.3",
+        "web-vitals": "2.1.4"
     },
     "scripts": {
         "start": "node ../utils/config-init.js %npm_config_env% && react-scripts start",
         "start:dev": "npm run start --env=dev",
+        "start:docker": "react-scripts start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "build": "node ../utils/config-init.js %npm_config_env% && react-scripts build"
+        "build": "react-scripts build"
     },
     "eslintConfig": {
         "extends": [
